docs: Atualiza README.md recursivamente backend e frontend
- Atualiza documentação do módulo 'painel' no backend.
- Cria documentação para o controlador de suporte 'e2e' no backend.
- Atualiza README principal do frontend.
- Cria/Atualiza READMEs para subdiretórios do frontend (views, stores, services, composables, mappers, router, types, utils, constants).